feat: added hierarchy editor

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,7 +3,7 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=244,272
+Pos=660,265
 Size=550,680
 
 [Window][test]
@@ -17,4 +17,8 @@ Size=440,212
 [Window][Debug]
 Pos=83,83
 Size=457,157
+
+[Window][Hierarchy]
+Pos=21,505
+Size=407,235
 
