--- a/imgui.ini
+++ b/imgui.ini
@@ -15,10 +15,14 @@ Pos=11,392
 Size=440,212
 
 [Window][Debug]
-Pos=83,83
+Pos=22,220
 Size=457,157
 
 [Window][Hierarchy]
 Pos=21,505
 Size=407,235
+
+[Window][Inspector]
+Pos=19,387
+Size=411,105
 
