--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,6 +56,7 @@ add_executable(${PROJECT_NAME}
 	# Editor
 	editor/editor.cpp
 	editor/hierarchy/hierarchy.cpp
+	editor/inspector/inspector.cpp
 
 	# stbi image
 	vendor/stbi_image/stbi_image.cpp
