feat: tbn matrix creation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,9 @@ add_executable(${PROJECT_NAME}
 	# Time
 	core/time/time.cpp
 
+	# Math
+	core/math/math.cpp
+
 	# Physics
 	core/physics/physics_world.cpp
 
