--- a/imgui.ini
+++ b/imgui.ini
@@ -21,8 +21,10 @@ Size=457,157
 [Window][Hierarchy]
 Pos=20,520
 Size=407,235
+Collapsed=1
 
 [Window][Inspector]
 Pos=787,497
 Size=411,104
+Collapsed=1
 
