--- a/imgui.ini
+++ b/imgui.ini
@@ -17,10 +17,12 @@ Size=440,212
 [Window][Debug]
 Pos=445,600
 Size=457,157
+Collapsed=1
 
 [Window][Hierarchy]
 Pos=24,483
 Size=407,235
+Collapsed=1
 
 [Window][Inspector]
 Pos=909,644
