fix: correct window size for mac display

--- a/imgui.ini
+++ b/imgui.ini
@@ -15,14 +15,16 @@ Pos=11,392
 Size=440,212
 
 [Window][Debug]
-Pos=465,593
+Pos=463,626
 Size=457,157
 
 [Window][Hierarchy]
-Pos=24,483
+Pos=22,734
 Size=407,235
+Collapsed=1
 
 [Window][Inspector]
-Pos=885,517
+Pos=886,709
 Size=411,104
+Collapsed=1
 
